# devops-docs

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
