[tool.poetry]
name = "crv"
version = "1.0.0"
description = "Generate and Publish CRV Manual"

authors = [
    "Iraj Mohebalian <iraj.mohebalian@bayer.com>"
]

readme = 'README.md'

repository = "https://github.com/bayer-int/crv"
homepage = "https://docs.int.bayer.com/crv/"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.3"
mkdocs-material = "^7.3.6"
mkdocs-git-revision-date-localized-plugin = "^0.10.3"

[build.system]
requires = ["poetry-core>=1.0.0"]
